--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,14 @@ authors = [
 requires-python = ">=3.13"
 dependencies = [
     "aiohttp>=3.13.3",
+    "fastapi>=0.128.0",
+    "googletrans>=4.0.2",
     "ipykernel>=7.1.0",
     "ipywidgets>=8.1.8",
     "kagglehub[pandas-datasets]>=0.4.0",
     "pillow>=12.1.0",
     "polars>=1.37.1",
+    "scikit-learn>=1.8.0",
     "torch>=2.9.1",
     "torch-c-dlpack-ext>=0.1.5",
     "torchvision>=0.24.1",
