--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ authors = [
 requires-python = ">=3.13"
 dependencies = [
     "aiohttp>=3.13.3",
+    "asyncpg>=0.31.0",
     "fastapi>=0.128.0",
     "googletrans>=4.0.2",
     "ipykernel>=7.1.0",
@@ -16,7 +17,10 @@ dependencies = [
     "kagglehub[pandas-datasets]>=0.4.0",
     "pillow>=12.1.0",
     "polars>=1.37.1",
+    "psycopg2-binary>=2.9.11",
+    "pyarrow>=23.0.0",
     "scikit-learn>=1.8.0",
+    "sqlalchemy>=2.0.46",
     "torch>=2.9.1",
     "torch-c-dlpack-ext>=0.1.5",
     "torchvision>=0.24.1",
