--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "ipykernel>=7.1.0",
     "ipywidgets>=8.1.8",
     "kagglehub[pandas-datasets]>=0.4.0",
+    "openai>=2.15.0",
     "pillow>=12.1.0",
     "polars>=1.37.1",
     "psycopg2-binary>=2.9.11",
