--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
     "ipywidgets>=8.1.8",
     "kagglehub[pandas-datasets]>=0.4.0",
     "openai>=2.15.0",
-    "pillow>=12.1.0",
+    "pillow-simd>=9.5.0.post2",
     "polars>=1.37.1",
     "psycopg2-binary>=2.9.11",
     "pyarrow>=23.0.0",
